# metricopt

./: .gitignore  pyproject.toml
algorithms/: ProxSpliting.py  __init__.py  prox_splitting.py
examples/: MRI_test.ipynb  bhv_proxsplitting.ipynb  euclidean_proxsplitting.ipynb  spd_proxspliting.ipynb  sphere_proxspliting.ipynb
spaces/: SPD.py  __init__.py  bhv.py  euclidean.py  sphere.py
tests/: ProxSpliting_test.ipynb  SPD_test.ipynb  sphere_test.ipynb
