[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "metricopt"
version = "0.1.0"
description = "Optimization methods in metric spaces (proximal, subdifferential, splitting)"
authors = [{name = "Mahshid Mirhashemi"}]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["algorithms", "spaces"]